<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/help_bg_img"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/spinnerPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_toLeftOf="@+id/spinnerPost"
        android:text="@string/Category" />
    
    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/spinnerPost"
        android:text="@string/Description" />
    
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="@+id/textViewDescription"
        android:layout_below="@+id/spinnerPost"
        android:ems="10"
        android:inputType="text"/>"
    
    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextDescription"
		android:layout_toLeftOf="@+id/editTextAddress"
        android:text="@string/Address" />
    
    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="@+id/textViewAddress"
        android:layout_below="@+id/editTextDescription"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/editTextDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewDetails"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

   <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="167dp"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/editTextAddress"
        android:text="@string/Details" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextAddress"
        android:layout_marginTop="78dp"
        android:text="@string/Phone" />

    
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewDetails"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerPost"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/SubmitPost" />

    <Button
        android:id="@+id/buttonMyPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonPost"
        android:layout_alignBottom="@+id/buttonPost"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:text="@string/MyPosts" />


</RelativeLayout>
